fixed navbar overflow

--- a/tailwind/output.scss
+++ b/tailwind/output.scss
@@ -812,6 +812,10 @@ video {
   align-self: flex-end;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .break-all {
   word-break: break-all;
 }
